# UrlVerify

./: CMakeLists.txt  README.md
include/: logger.hpp  url_content.h  utility.h
src/: main.cpp  url_content.cpp  utility.cpp
